--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     mysql:
         image: mysql/mysql-server:8.0
         environment:
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+            MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
             MYSQL_ROOT_HOST: "%"
             MYSQL_DATABASE: ${DB_DATABASE}
             MYSQL_USER: ${DB_USERNAME}
@@ -14,22 +15,29 @@ services:
             - dbdata:/var/lib/mysql
         networks:
             - app-network
-    app:
-        build:
-            context: ./Docker/Python
-            dockerfile: Dockerfile
-        environment:
-            DB_USERNAME: ${DB_USERNAME}
-            DB_PASSWORD: ${DB_PASSWORD}
-            DB_DATABASE: ${DB_DATABASE}
-        depends_on:
-            - mysql
-        networks:
-            - app-network
-        volumes:
-            - "/home/jose/dev/character_creation:/app"
+
+#    app:
+#        build:
+#            context: ./Docker/Python
+#            dockerfile: Dockerfile
+#        environment:
+#            DB_HOST: mysql
+#            DB_PORT: 3306
+#            DB_DATABASE: ${DB_DATABASE}
+#            DB_USERNAME: ${DB_USERNAME}
+#            DB_PASSWORD: ${DB_PASSWORD}
+#        ports:
+#            - "8000:8000"
+#        depends_on:
+#            - mysql
+#        volumes:
+#            - .:/app
+#        networks:
+#            - app-network
+
 volumes:
     dbdata:
+
 networks:
     app-network:
         driver: bridge
